--- a/details.html
+++ b/details.html
@@ -2,129 +2,119 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Amazing Events</title>
-  <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/styles.css">
-  <link rel="stylesheet" href="./styles/media_query.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Amazing Events</title>
+    <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/media_query.css">
 
 
-  <script src="https://kit.fontawesome.com/cee4e31326.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cee4e31326.js" crossorigin="anonymous"></script>
 </head>
 
 <header>
-  <!---------------------------- NVBAR ---------------------------->
-  <nav class="navbar bg-body-tertiary" id="principio">
-    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
-        alt="img"></a><!-- LOGO LLEVA AL HOME -->
-    <form class="container-nav">
-      <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
-      <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
-          Events</button></a>
-      <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
-          Events</button></a>
-      <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
-      <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
-    </form>
-  </nav>
+    <!---------------------------- NVBAR ---------------------------->
+    <nav class="navbar bg-body-tertiary" id="principio">
+        <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+                alt="img"></a><!-- LOGO LLEVA AL HOME -->
+        <form class="container-nav">
+            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
+            <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
+                    Events</button></a>
+            <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
+                    Events</button></a>
+            <a href="./contact.html"><button type="button"
+                    class="btn btn-outline-secondary btn-nav">Contact</button></a>
+            <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
+        </form>
+    </nav>
 </header>
 
 <body>
-  <!---------------------------- CAROUSEL? ---------------------------->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./assets/details.png" class="img">
+    <!---------------------------- CAROUSEL? ---------------------------->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./assets/details.png" class="img">
+        </div>
+        <div>
+            <a href="./stats.html">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </button>
+            </a>
+        </div>
+        <div>
+            <a href="./upcoming_events.html">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </button>
+            </a>
+        </div>
     </div>
-    <div>
-      <a href="./stats.html">
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-      </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!---------------------------- DETAILS ---------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+    <!---------------------------- BOTON ARRIBA ---------------------------->
+    <div id="button-up">
+        <i class="fas fa-chevron-up"></i>
     </div>
-    <div>
-      <a href="./upcoming_events.html">
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
-      </a>
-    </div>
-  </div>
+
+    <!---------------------------- FOOTER ---------------------------->
+    <footer class="container-footer">
+        <div class="div-img-footer">
+            <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
+            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img"
+                    class="img-footer"></a>
+            <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
+        </div>
+    </footer>
+
+    <!---------------------------- BOOTSTRAP ---------------------------->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 
+    <!---------------------------- LINK JS ---------------------------->
+    <script src="./js/details.js"></script>
+    <script src="./js/amazing_events.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/boton_arriba.js"></script>
+    <script src="./js/filtrado_tarjetas.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!---------------------------- DETAILS ---------------------------->
-  
-<!-- * seccion para Detalles  -->
-<div id="sectionDetail" class="container text-center">
-    <div class="d-flex justify-content-center">
-      <h1 class="display-4 text-white">Details</h1>
-      </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!---------------------------- BOTON ARRIBA ---------------------------->
-  <div id="button-up">
-    <i class="fas fa-chevron-up"></i>
-  </div>
-
-  <!---------------------------- FOOTER ---------------------------->
-  <footer class="container-footer">
-    <div class="div-img-footer">
-      <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
-      <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
-      <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
-    </div>
-  </footer>
-
-  <!---------------------------- BOOTSTRAP ---------------------------->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
-
-
-  <!---------------------------- LINK JS ---------------------------->
-  <script src="./js/details.js"></script>
-  <script src="./js/amazing_events.js"></script>
-  <script src="./js/main.js"></script>
-  <script src="./js/boton_arriba.js"></script>
-  <script src="./js/filtrado_tarjetas.js"></script>
-  
 
 </body>
+
 </html>
