--- a/details.html
+++ b/details.html
@@ -35,6 +35,8 @@
 </header>
 
 <body>
+    <!---------------------------- CIERRO NVBAR ---------------------------->
+
     <!---------------------------- CAROUSEL? ---------------------------->
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -57,20 +59,22 @@
             </a>
         </div>
     </div>
-
-
-
-
+    <!----------------------- CIERRO CAROUSEL? ------------------------>
 
     <!---------------------------- DETAILS ---------------------------->
 
 
 
 
+
+
+    <!------------------------ CIERRO DETAILS ------------------------->
+
     <!---------------------------- BOTON ARRIBA ---------------------------->
     <div id="button-up">
         <i class="fas fa-chevron-up"></i>
     </div>
+    <!---------------------- CIERRO BOTON ARRIBA --------------------->
 
     <!---------------------------- FOOTER ---------------------------->
     <footer class="container-footer">
@@ -81,6 +85,7 @@
             <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
         </div>
     </footer>
+    <!---------------------------- CIERRO FOOTER ---------------------------->
 
     <!---------------------------- BOOTSTRAP ---------------------------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -89,11 +94,11 @@
 
 
     <!---------------------------- LINK JS ---------------------------->
-    <script src="./js/details.js"></script>
-    <script src="./js/amazing_events.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/boton_arriba.js"></script>
-    <script src="./js/filtrado_tarjetas.js"></script>
+    <script src="../js/details.js"></script>
+    <script src="../js/amazing_events.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/boton_arriba.js"></script>
+    <script src="../js/filtrado_tarjetas.js"></script>
 
 
 </body>
