--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   <script src="./js/main.js"></script>
   <script src="./js/boton_arriba.js"></script>
   <script src="./js/filtrado_tarjetas.js"></script>
+  <script src="./js/details.js"></script>
 
 </body>
 </html>
